examples/test/testpolicy10402.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10402
  namespace: namespace273
spec:
  podSelector:
    matchLabels:
      key0: value41
      key20: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value16
          key43: value45
      podSelector:
        matchLabels:
          key49: value39
          key19: value37
          key43: value37
